--- a/car.html
+++ b/car.html
@@ -380,7 +380,7 @@
 	              <ul>
 	                <li><a href="https://maps.app.goo.gl/FGphiQJ91JrdEioW6?g_st=ipc"><span class="icon icon-map-marker"></span><span class="text"> Bd El Ouahda, Nouasser, Maroc</span></li>
 	                <li><a href="tel://+2127099073319"><span class="icon icon-phone"></span><span class="text">+212 709073319</span></a></li>
-	                <li><a href="mailto:contact@atlasafricacar.ma"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
+	                <li><a href="mailto:contact@atlasafricacar.mcontact@atlas-africa-car-services.coma"><span class="icon icon-envelope"></span><span class="text">contact@atlas-africa-car-services.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
