--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 			          	<div class="icon mr-3">
 			          		<span class="icon-envelope-o brand-black"></span>
 			          	</div>
-			            <p><span class="brand-black">Email:</span> <a href="mailto:contact@atlasafricacar.ma">contact@atlasafricacar.ma</a></p>
+			            <p><span class="brand-black">Email:</span> <a href="mailto:contact@atlas-africa-car-services.com">contact@atlas-africa-car-services.com</a></p>
 			          </div>
 		          </div>
 		        </div>
@@ -180,7 +180,7 @@
 	              <ul>
 	                <li><a href="https://maps.app.goo.gl/FGphiQJ91JrdEioW6?g_st=ipc"><span class="icon icon-map-marker"></span><span class="text"> Bd El Ouahda, Nouasser, Maroc</span></li>
 	                <li><a href="tel://+2127099073319"><span class="icon icon-phone"></span><span class="text">+212 709073319</span></a></li>
-	                <li><a href="mailto:contact@atlasafricacar.ma"><span class="icon icon-envelope"></span><span class="text">contact@atlasafricacar.ma</span></a></li>
+	                <li><a href="mailto:contact@atlas-africa-car-services.com"><span class="icon icon-envelope"></span><span class="text">contact@atlas-africa-car-services.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -224,7 +224,7 @@
     const form = document.getElementById('contactForm');
     if (!form) return;
 
-    const TO_EMAIL = 'contact@atlasafricacar.ma'; // The address that will receive the email
+    const TO_EMAIL = 'contact@atlas-africa-car-services.com'; // The address that will receive the email
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
