--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="testimony-wrap rounded text-center py-4 pb-5"
                   <div class="text pt-4">
                     <p class="mb-4"> J’ai loué un SUV pour un road trip dans le sud du Maroc, tout s’est parfaitement déroulé. Assistance 24h/24 très rassurante. Je reviendrai sans hésiter !</p>
-                    <p class="name">Roger Scott</p>
+                    <p class="name">Said L.</p>
                     <span class="position">UI Designer</span>
                   </div>
                 </div>
