enhaced keywords for SEO

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
           <div class="col-lg-8 ftco-animate">
           	<div class="text w-100 text-center mb-md-5 pb-md-5">
-	            <h1 class="mb-4">Louez une voiture facilement et rapidement</h1>
+	            <h1 class="mb-4">Location de voiture Aéroport Casablanca Mohammed V</h1>
 	            <p style="font-size: 18px;">You choose, We deliver</p>
 	            
 	            	
@@ -80,7 +80,7 @@
     			<div class="col-md-12	featured-top">
     				<div class="row no-gutters">
 	  					<div class="col-md-4 d-flex align-items-center">
-	  						<form action="#" class="request-form ftco-animate bg-primary">
+	  						<form action="car.html" class="request-form ftco-animate bg-primary">
 		          		<h2>Réservez votre trajet</h2>
 			    				<div class="form-group">
 			    					<label for="" class="label brand-black">Départ</label>
@@ -111,7 +111,7 @@
 	  					</div>
 	  					<div class="col-md-8 d-flex align-items-center">
 	  						<div class="services-wrap bg-primary rounded-right w-100">
-	  							<h3 class="heading-section mb-4">Bien plus qu’une location, une expérience</h3>
+	  							<h3 class="heading-section mb-4">Livraison partout</h3>
 	  							<div class="row d-flex mb-4">
 					          <div class="col-md-4 d-flex align-self-stretch ftco-animate">
 					            <div class="services w-100 text-center">
@@ -138,7 +138,7 @@
 					            </div>      
 					          </div>
 					        </div>
-					        <p><a href="#" class="btn btn-secondary py-3 px-4">Reservez la véhicule qui convient parfaitement à vos besoins</a></p>
+					        <p><a href="car.html" class="btn btn-secondary py-3 px-4">Reservez la véhicule qui convient parfaitement à vos besoins</a></p>
 	  						</div>
 	  					</div>
 	  				</div>
@@ -229,7 +229,7 @@
 					<div class="col-md-6 wrap-about ftco-animate">
 	          <div class="heading-section heading-section-white pl-md-5">
 	          	<span class="subheading">About us</span>
-	            <h2 class="mb-4 brand-black">Bienvenue à Atlas Africa Car</h2>
+	            <h2 class="mb-4 brand-black">Atlas Africa Car Service</h2>
 
 	            <p>Atlas Africa Car est une agence de location de voitures basée à Casablanca, spécialisée dans la mobilité au Maroc. Nous proposons une large gamme de véhicules récents et bien entretenus, adaptés à tous vos besoins : affaires, tourisme, transferts aéroport, ou événements spéciaux. Notre équipe locale vous accompagne avec un service personnalisé, des tarifs transparents et une assistance 24/7 pour garantir votre confort et votre sécurité sur la route.</p>
               <p>Que vous soyez résident ou visiteur, profitez de notre expertise et de notre engagement pour rendre votre expérience de location simple, rapide et agréable. Découvrez le Maroc en toute liberté avec Atlas Africa Car.</p>
@@ -325,7 +325,7 @@
                   <div class="text pt-4">
                     <p class="mb-4"> J’ai loué un SUV pour un road trip dans le sud du Maroc, tout s’est parfaitement déroulé. Assistance 24h/24 très rassurante. Je reviendrai sans hésiter !</p>
                     <p class="name">Said L.</p>
-                    <span class="position">UI Designer</span>
+                    <span class="position">Casablanca</span>
                   </div>
                 </div>
               </div>
