--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	  					</div>
 	  					<div class="col-md-8 d-flex align-items-center">
 	  						<div class="services-wrap bg-primary rounded-right w-100">
-	  							<h3 class="heading-section mb-4">Livraison partout</h3>
+	  							<h3 class="heading-section mb-4">Livraison Aéroport et partout au Maroc</h3>
 	  							<div class="row d-flex mb-4">
 					          <div class="col-md-4 d-flex align-self-stretch ftco-animate">
 					            <div class="services w-100 text-center">
